Updates to hybrid bill views, components and global translation file

--- a/app/views/hybrid_bills/email.haml
+++ b/app/views/hybrid_bills/email.haml
@@ -1,11 +1,11 @@
-- page_title = title('Petition by email, post or in person. Object to the High Speed Rail (West Midlands – Crewe) Bill')
+- page_title = title('Petition by email, post or in person. Object to the High Speed Rail (West Midlands to Crewe) Bill')
 
 #content.hero.theme--grey-4{ tabindex: '0' }
   .container
     %h1
       Petition by email, post or in person
       %span.sr-only .
-      %span Object to the High Speed Rail (West Midlands – Crewe) Bill
+      %span Object to the High Speed Rail (West Midlands to Crewe) Bill
 
     %h2.typography--light Step 1 of 2
 
