--- a/app/views/hybrid_bills/email/organisation.haml
+++ b/app/views/hybrid_bills/email/organisation.haml
@@ -1,11 +1,11 @@
-- page_title = title('Writing your petition - organisation. Object to the High Speed Rail (West Midlands – Crewe) Bill')
+- page_title = title('Writing your petition - organisation. Object to the High Speed Rail (West Midlands to Crewe) Bill')
 
 #content.hero.theme--grey-4{ tabindex: '0' }
   .container
     %h1
       Writing your petition - organisation
       %span.sr-only .
-      %span Object to the High Speed Rail (West Midlands – Crewe) Bill
+      %span Object to the High Speed Rail (West Midlands to Crewe) Bill
 
     %h2.typography--light Step 2 of 2
 
@@ -53,6 +53,6 @@
       %h2 Bill updates
       %p
         For news and updates on the Bill, visit the
-        = succeed "." do
-          = link_to 'High Speed Rail (West Midlands – Crewe) Bill Committee website', 'http://www.parliament.uk/business/committees/committees-a-z/commons-select/high-speed-rail-west-midlands-crewe-bill-select-committee-commons', target: '_blank'
-        %span.sr-only (This link will open in a new window).
+        = link_to 'http://www.parliament.uk/business/committees/committees-a-z/commons-select/high-speed-rail-west-midlands-crewe-bill-select-committee-commons', target: '_blank' do
+          High Speed Rail (West Midlands to Crewe) Bill Committee website
+          %span.sr-only (This link will open in a new window).
