--- a/app/views/hybrid_bills/errors/submit_another_way.haml
+++ b/app/views/hybrid_bills/errors/submit_another_way.haml
@@ -1,6 +1,6 @@
 #content.section--primary{ tabindex: '0' }
   .container
-    %h1 Object to the High Speed Rail (West Midlands – Crewe) Bill
+    %h1 Object to the High Speed Rail (West Midlands to Crewe) Bill
 
     %h2 Submit Another Way Content
 
