--- a/app/views/hybrid_bills/post.html.haml
+++ b/app/views/hybrid_bills/post.html.haml
@@ -1,8 +1,8 @@
-- page_title = title('Object to the High Speed Rail (West Midlands – Crewe) Bill')
+- page_title = title('Object to the High Speed Rail (West Midlands to Crewe) Bill')
 
 #content.section--primary{ tabindex: '0' }
   .container
-    %h1 Object to the High Speed Rail (West Midlands – Crewe) Bill
+    %h1 Object to the High Speed Rail (West Midlands to Crewe) Bill
     %br
     .status--highlight
       %p The deadline has passed.
@@ -11,14 +11,16 @@
   .container
     %h2 Overview
 
-    %p Any individual, group of individuals, organisation or group of organisations affected by the High Speed Rail (West Midlands – Crewe) Bill can object to it.
+    %p Any individual, group of individuals, organisation or group of organisations affected by the High Speed Rail (West Midlands to Crewe) Bill can object to it.
 
     %p
       To find out more about the Bill, visit the
-      = link_to 'High Speed Two (HS2) Limited website', 'https://www.gov.uk/government/organisations/high-speed-two-limited', target: '_blank'
-      %span.sr-only (This link will open in a new window).
+      = link_to 'https://www.gov.uk/government/organisations/high-speed-two-limited', target: '_blank' do
+        High Speed Two (HS2) Limited website
+        %span.sr-only> (This link will open in a new window).
 
     %p
       For the latest updates, visit the
-      = link_to 'High Speed Rail (West Midlands – Crewe) Bill Committee website', 'http://www.parliament.uk/business/committees/committees-a-z/commons-select/high-speed-rail-west-midlands-crewe-bill-select-committee-commons', target: '_blank'
-      %span.sr-only (This link will open in a new window).
+      = link_to 'http://www.parliament.uk/business/committees/committees-a-z/commons-select/high-speed-rail-west-midlands-crewe-bill-select-committee-commons', target: '_blank' do
+        High Speed Rail (West Midlands to Crewe) Bill Committee website
+        %span.sr-only> (This link will open in a new window).
