--- a/app/views/hybrid_bills/steps/forms/components/_petitioner-type.haml
+++ b/app/views/hybrid_bills/steps/forms/components/_petitioner-type.haml
@@ -1,5 +1,5 @@
 %fieldset
-  %legend.sr-only Please choose who you subitting a petition for
+  %legend.sr-only Please choose who you submitting a petition for
   .block--border__bottom
     %ol.list--block
       %li
