--- a/app/views/hybrid_bills/steps/forms/organisation.haml
+++ b/app/views/hybrid_bills/steps/forms/organisation.haml
@@ -1,11 +1,11 @@
-- page_title = title('Organisation\'s details. Object to the High Speed Rail (West Midlands – Crewe) Bill')
+- page_title = title('Organisation’s details. Object to the High Speed Rail (West Midlands to Crewe) Bill')
 
 #content.hero.theme--grey-4{ tabindex: '0' }
   .container
     %h1
       Organisation's details
       %span.sr-only .
-      %span Object to the High Speed Rail (West Midlands – Crewe) Bill
+      %span Object to the High Speed Rail (West Midlands to Crewe) Bill
 
     %h2.typography--light Step 3 of 5
 
