--- a/app/views/hybrid_bills/email/_body.haml
+++ b/app/views/hybrid_bills/email/_body.haml
@@ -42,5 +42,6 @@
       %h2 Bill updates
       %p
         For news and updates on the Bill, visit the
-        = link_to 'High Speed Rail (West Midlands – Crewe) Bill Committee website', 'http://www.parliament.uk/business/committees/committees-a-z/commons-select/high-speed-rail-west-midlands-crewe-bill-select-committee-commons', target: '_blank'
-        %span.sr-only (This link will open in a new window).
+        = link_to 'http://www.parliament.uk/business/committees/committees-a-z/commons-select/high-speed-rail-west-midlands-crewe-bill-select-committee-commons', target: '_blank' do
+          High Speed Rail (West Midlands to Crewe) Bill Committee website
+          %span.sr-only (This link will open in a new window).
