--- a/app/views/hybrid_bills/index.haml
+++ b/app/views/hybrid_bills/index.haml
@@ -1,45 +1,57 @@
-- page_title = title('Hybrid Bills')
+- page_title = title("#{t('.title').capitalize}")
 
 #content.section--primary{ tabindex: '0' }
   .container
-    %h1 Hybrid Bills
+    %h1= page_title
 
     %p
-      Hybrid Bills mix the characteristics of
-      = link_to 'Public Bills', 'http://www.parliament.uk/about/how/laws/bills/public/', target: '_blank'
-      %span.sr-only
-        This link will open in a new window.
-      and
+      = t('.intro_a')
+
+      = succeed " " do
+        = link_to 'http://www.parliament.uk/about/how/laws/bills/public/', target: '_blank' do
+          = t('.public_bills')
+          %span.sr-only>
+            = t('open_new_window_link')
+
+      = t('.intro_b')
+
       = succeed "." do
-        = link_to 'Private Bills', 'http://www.parliament.uk/about/how/laws/bills/private/', target: '_blank'
-      %span.sr-only
-        This link will open in a new window.
-      They often propose works of national importance in a specific area of the UK.
+        = link_to 'http://www.parliament.uk/about/how/laws/bills/private/', target: '_blank' do
+          = t('.private_bills')
+          %span.sr-only>
+            = t('open_new_window_link')
 
-    %p For example, the Channel Tunnel Bills passed in the 1970s and 1980s and the Crossrail Bill passed in 2008.
+      = t('.intro_c')
 
-    %p Changes to the law proposed by a Hybrid Bill affect the general public and impact specific individuals, groups or organisations.
+    %p= t('.intro_d')
+
+    %p= t('.intro_e')
 
     %p
-      To find out more, read our
+      = t('.hybrid_bill_paper_text')
       = succeed "." do
-        = link_to 'Hybrid Bill Background Paper', 'http://researchbriefings.parliament.uk/ResearchBriefing/Summary/SN06736', target: '_blank'
-      %span.sr-only
-        This link will open in a new window.
+        = link_to 'http://researchbriefings.parliament.uk/ResearchBriefing/Summary/SN06736', target: '_blank' do
+          = t('.hybrid_bill_paper_link')
+          %span.sr-only>
+            = t('open_new_window_link')
 
 %section
   .container
-    %h2 Objecting to a Hybrid Bill
+    %h2= "#{t('.object_hybrid_bill').capitalize}"
 
-    %p Any individual, group of individuals, organisation or group of organisations affected by a Hybrid Bill can object to it.
+    %p= t('.object_hybrid_bill_a')
 
-    %p This can lead to changes being made to the Bill, called additional provisions.
+    %p= t('.object_hybrid_bill_b')
 
-    %p Objecting to additional provisions is separate to objecting to the original Bill.
+    %p= t('.object_hybrid_bill_c')
 
 %section
   .container
-    %h2 Open Hybrid Bills
+    %h2= "#{t('.current_hybrid_bills').capitalize}"
+
+    %h3
+      = t('hybrid_bills.hs2')
+      = "#{t('hybrid_bills.hs2_bill').capitalize}"
 
     .section--minor
-      = link_to 'Object to the High Speed Rail (West Midlands – Crewe) Bill', hybrid_bill_path('1'), class: 'btn--primary'
+      = link_to t('hybrid_bills.object_to_the_bill'), hybrid_bill_path('1'), class: 'btn--primary'
