--- a/app/views/shared/_map.html.haml
+++ b/app/views/shared/_map.html.haml
@@ -1,4 +1,4 @@
 #mapbox{ data: { json: { location: @json_location }, map: { title: t('constituencies.map.accessibility_title') + @constituency.name } } }
   %noscript
-    .highlight--box.highlight--caution__soft
+    .status--highlight.theme--caution
       %p= t('constituencies.constituency.constituency_map_fallback')
