[HB] Post phase updates to hybrid bill views

--- a/app/views/hybrid_bills/post.html.haml
+++ b/app/views/hybrid_bills/post.html.haml
@@ -24,3 +24,13 @@
       = link_to 'http://www.parliament.uk/business/committees/committees-a-z/commons-select/high-speed-rail-west-midlands-crewe-bill-select-committee-commons', target: '_blank' do
         High Speed Rail (West Midlands to Crewe) Bill Committee website
         %span.sr-only> (This link will open in a new window).
+
+    %br
+    .block.accent--mint
+      %h3 Help and support
+      %p
+        For more information email
+        = link_to 'prbohoc@parliament.uk', 'mailto:prbohoc@parliament.uk'
+        or phone
+        = succeed "." do
+          = link_to '020 7219 3250', 'tel:02072193250'
