--- a/app/views/hybrid_bills/index.haml
+++ b/app/views/hybrid_bills/index.haml
@@ -49,9 +49,9 @@
   .container
     %h2= "#{t('.current_hybrid_bills').capitalize}"
 
-    %h3
-      = t('hybrid_bills.hs2')
-      = "#{t('hybrid_bills.hs2_bill').capitalize}"
+    %ol.list--block
+      %li
+        .list--details
+          %h3= link_to(("#{t('hybrid_bills.hs2')} #{t('hybrid_bills.hs2_bill').capitalize}"), hybrid_bill_path('1'))
 
-    .section--minor
-      = link_to t('hybrid_bills.object_to_the_bill'), hybrid_bill_path('1'), class: 'btn--primary'
+          %p= t('hybrid_bills.petition_status_post')
